syntax = "proto3";
package msg.user.model;
option go_package = "github.com/duongquoctue/insync/pkg/proto/user/model;insync_model";

message User {
  int64 id = 1;
  string username = 2;
  string first_name = 3;
  string last_name = 4;
}
